--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <div class="d-flex flex-column col-5 align-items-center text-center align-self-center">
           <div class="mx-auto text-center">
             <div class="p-3">
-              <img src=ac_kpj.jpg style="height:15rem" class="rounded">
+              <img src=kristimas2.png style="height:15rem" class="rounded">
             </div>
             <div class="p-2">
               <h1>Kristin Privitera-Johnson</h1>
@@ -98,7 +98,7 @@
         <div class="d-flex flex-col">
           <div class="mx-auto">
             <div class="p-3 mt-3 text-center">
-              <img src=ac_kpj.jpg style="height:15rem" class="rounded">
+              <img src=kristimas2.png style="height:15rem" class="rounded">
             </div>
             <div class="p-2 text-center">
               <h1>Kristin Privitera-Johnson</h1>
